# Beautify-Demo-master

./: .gitignore  BeautifyParams.xml  build_grandle.sh  fea_ability.py  pack.sh  pack_sdk_local.sh  readme.txt  settings.gradle
app/: .gitignore  build.gradle  test.readmine
app/src/main/: AndroidManifest.xml
app/src/main/assets/: filterData.json  stickerData.json
app/src/main/assets/filter/: filter_lookup_17yo.filter  filter_lookup_WKW.filter  filter_lookup_abao.filter  filter_lookup_blossom.filter  filter_lookup_bw.filter  filter_lookup_calm.filter  filter_lookup_chanel.filter  filter_lookup_chaplin.filter  filter_lookup_clight.filter  filter_lookup_cold.filter  filter_lookup_cutie.filter  filter_lookup_flowers.filter  filter_lookup_glitter.filter  filter_lookup_ice_lady.filter  filter_lookup_jiang_nan.filter  filter_lookup_lavender.filter  filter_lookup_lomo.filter  filter_lookup_macaron.filter  filter_lookup_memory.filter  filter_lookup_nyc.filter  filter_lookup_old_dream.filter  filter_lookup_old_times.filter  filter_lookup_paris.filter  filter_lookup_pink.filter  filter_lookup_prague.filter  filter_lookup_sakura.filter  filter_lookup_spring.filter  filter_lookup_story.filter  filter_lookup_sunny.filter  filter_lookup_teaTime.filter  filter_lookup_times.filter  filter_lookup_trip.filter  filter_lookup_warm.filter  filter_lookup_whiten.filter  filter_lookup_wlight.filter
app/src/main/java/gpuimage/: GPUImage.java  GPUImageFilter.java  (+6 more)
gradle/wrapper/: gradle-wrapper.properties
megviibeautyjni/: build.gradle
megviibeautyjni/src/main/: AndroidManifest.xml
megviibeautyjni/src/main/cpp/: CMakeLists.txt  WorkerThread.cpp  beautify_handler.cpp  gl_context_handler.cpp  megvii_beautify_jni.cpp
megviibeautyjni/src/main/cpp/beautify_image/: CMakeLists.txt
megviibeautyjni/src/main/cpp/beautify_image/include/: bare_format_transform.h
megviibeautyjni/src/main/cpp/beautify_image/src/: bare_format_transform.cpp
megviibeautyjni/src/main/cpp/include/: MG_Beautify.h  MG_Common.h  MG_Sticker.h  WorkerThread.h  gl_context_handler.h  mg_dense_landmark.h  mg_timer.h
megviibeautyjni/src/main/cpp/include/beautify_image/: MG_BeautifyImage.h
pack_demo_res/: CMakeLists.txt
(+113 files in other folders)
